--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -153,3 +153,12 @@ strong
     margin: 10px 2px;
     cursor: pointer;
   }
+
+  .editor-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 4;
+  }
+  
