--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -132,6 +132,9 @@ a:hover
 {
     text-decoration : underline;
 }
+p{
+  color: white;
+}
 
 strong
 {
@@ -189,36 +192,41 @@ primrose {
 .modal {
     display: none;
     position: fixed;
-    z-index: 3;
-    left: 0;
+    z-index: 10;
+    left: 50%;
     top: 0;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    height: 75%;
     background-color: rgba(0, 0, 0, 0.4);
+    border: 1px solid #888;
+    border-radius: 4px;
+    max-width: 800px;
+    margin-top: 150px;
+    margin-left: -40%; /* Add this line (negative half of the width percentage) */
+
   }
   
   .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 4px;
-  }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 75%;
+    padding: 40px;
+    box-sizing: border-box; /* Add this line so padding is included in the width and height */
+    overflow-y: auto;
+}
   
   .close {
-    color: #aaaaaa;
+    position: absolute;
+    color: white;
     float: right;
-    font-size: 28px;
-    font-weight: bold;
   }
   
   .close:hover,
   .close:focus {
-    color: #000;
+    color: white;
     text-decoration: none;
     cursor: pointer;
   }
